--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "autoprefixer": "^10.4.16",
         "axios": "^1.11.0",
         "concurrently": "^9.0.1",
+        "fast-glob": "^3.3.3",
         "laravel-vite-plugin": "^2.0.0",
         "postcss": "^8.4.32",
         "tailwindcss": "^3.4.0",
